Add FPS counting

--- a/MDK-ARM/STM32H747XI_test_CM7/STM32H747XI_test_CM7.build_log.htm
+++ b/MDK-ARM/STM32H747XI_test_CM7/STM32H747XI_test_CM7.build_log.htm
@@ -30,33 +30,35 @@ Build target 'STM32H747XI_test_CM7'
 Note: source file '../CM7/Core/Src/main.c' - object file renamed from 'STM32H747XI_test_CM7\main.o' to 'STM32H747XI_test_CM7\main_1.o'.
 Note: source file '../CM7/Core/Src/stm32h7xx_it.c' - object file renamed from 'STM32H747XI_test_CM7\stm32h7xx_it.o' to 'STM32H747XI_test_CM7\stm32h7xx_it_1.o'.
 Note: source file '../CM7/Core/Src/stm32h7xx_hal_msp.c' - object file renamed from 'STM32H747XI_test_CM7\stm32h7xx_hal_msp.o' to 'STM32H747XI_test_CM7\stm32h7xx_hal_msp_1.o'.
-assembling startup_stm32h747xx_CM7.s...
-compiling stm32h7xx_hal_cortex.c...
-compiling stm32h7xx_it.c...
-compiling main.c...
 compiling stm32h7xx_hal_dcmi.c...
-compiling stm32h7xx_hal_pwr.c...
-compiling stm32h7xx_hal_gpio.c...
-compiling stm32h7xx_hal_flash.c...
-compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_it.c...
 compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_mdma.c...
 compiling stm32h7xx_hal_msp.c...
+compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_pwr.c...
+compiling stm32h7xx_hal_cortex.c...
+compiling main.c...
+../CM7/Core/Src/main.c(310): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  	cam_frames_per_second = 1000.0/((float)(HAL_GetTick() - last_frame));
+../CM7/Core/Src/main.c: 1 warning, 0 errors
+compiling stm32h7xx_hal_flash.c...
 compiling stm32h7xx_hal_flash_ex.c...
 compiling stm32h7xx_hal_dma_ex.c...
 compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_rcc_ex.c...
 compiling stm32h7xx_hal_dma.c...
-compiling stm32h7xx_hal_tim.c...
-compiling stm32h7xx_hal_i2c_ex.c...
 compiling stm32h7xx_hal_tim_ex.c...
+compiling stm32h7xx_hal_i2c_ex.c...
+compiling stm32h7xx_hal_tim.c...
+compiling stm32h7xx_hal.c...
 compiling system_stm32h7xx_dualcore_boot_cm4_cm7.c...
 compiling stm32h7xx_hal_exti.c...
-compiling stm32h7xx_hal.c...
 compiling stm32h7xx_hal_i2c.c...
 compiling stm32h7xx_hal_pwr_ex.c...
 linking...
-Program Size: Code=11906 RO-data=722 RW-data=20 ZI-data=1836  
-"STM32H747XI_test_CM7\STM32H747XI_test_CM7.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=12002 RO-data=722 RW-data=28 ZI-data=1860  
+"STM32H747XI_test_CM7\STM32H747XI_test_CM7.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -80,7 +82,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:01:09
+Build Time Elapsed:  00:01:17
 </pre>
 </body>
 </html>
