--- a/MDK-ARM/STM32H747XI_test_CM7/STM32H747XI_test_CM7.build_log.htm
+++ b/MDK-ARM/STM32H747XI_test_CM7/STM32H747XI_test_CM7.build_log.htm
@@ -5,11 +5,11 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.33.0.0
 Copyright (C) 2020 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Oleg Yoyo, open_source, LIC=6XJT4-FM9UA-LVK1I-TP204-5XIRR-FIUX7
+License Information: Vlad Horbach, Vlad, LIC=AK1BF-6AZ39-5BXEB-2Q4DZ-37TGM-FBR96
  
 Tool Versions:
 Toolchain:       MDK-ARM Professional  Version: 5.33.0.0
-Toolchain Path:  D:\Program Files\KeilMDK\ARM\ARMCC\Bin
+Toolchain Path:  C:\Keil_v5\ARM\ARMCC\Bin
 C Compiler:      Armcc.exe V5.06 update 7 (build 960)
 Assembler:       Armasm.exe V5.06 update 7 (build 960)
 Linker/Locator:  ArmLink.exe V5.06 update 7 (build 960)
@@ -21,44 +21,43 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.8.0
 Dialog DLL:      TCM.DLL V1.48.0.0
  
 <h2>Project:</h2>
-D:\swdev\STM32H747XI_test\MDK-ARM\STM32H747XI_test.uvprojx
+D:\SANAT\Oleg\STM32H747XI_test-main\MDK-ARM\STM32H747XI_test.uvprojx
 Project File Date:  03/26/2021
 
 <h2>Output:</h2>
-*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\Program Files\KeilMDK\ARM\ARMCC\Bin'
+*** Using Compiler 'V5.06 update 7 (build 960)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'STM32H747XI_test_CM7'
 Note: source file '../CM7/Core/Src/main.c' - object file renamed from 'STM32H747XI_test_CM7\main.o' to 'STM32H747XI_test_CM7\main_1.o'.
 Note: source file '../CM7/Core/Src/stm32h7xx_it.c' - object file renamed from 'STM32H747XI_test_CM7\stm32h7xx_it.o' to 'STM32H747XI_test_CM7\stm32h7xx_it_1.o'.
 Note: source file '../CM7/Core/Src/stm32h7xx_hal_msp.c' - object file renamed from 'STM32H747XI_test_CM7\stm32h7xx_hal_msp.o' to 'STM32H747XI_test_CM7\stm32h7xx_hal_msp_1.o'.
-compiling stm32h7xx_hal_dcmi.c...
-compiling stm32h7xx_it.c...
-compiling stm32h7xx_hal_hsem.c...
-compiling stm32h7xx_hal_mdma.c...
-compiling stm32h7xx_hal_msp.c...
-compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_hal_pwr_ex.c...
 compiling stm32h7xx_hal_pwr.c...
-compiling stm32h7xx_hal_cortex.c...
+compiling stm32h7xx_hal_hsem.c...
+compiling stm32h7xx_hal_gpio.c...
+compiling stm32h7xx_it.c...
 compiling main.c...
-../CM7/Core/Src/main.c(310): warning:  #1035-D: single-precision operand implicitly converted to double-precision
-  	cam_frames_per_second = 1000.0/((float)(HAL_GetTick() - last_frame));
-../CM7/Core/Src/main.c: 1 warning, 0 errors
+compiling stm32h7xx_hal_dcmi.c...
+compiling stm32h7xx_hal_mdma.c...
+compiling stm32h7xx_hal_cortex.c...
 compiling stm32h7xx_hal_flash.c...
+compiling stm32h7xx_hal_msp.c...
 compiling stm32h7xx_hal_flash_ex.c...
 compiling stm32h7xx_hal_dma_ex.c...
 compiling stm32h7xx_hal_rcc.c...
 compiling stm32h7xx_hal_rcc_ex.c...
 compiling stm32h7xx_hal_dma.c...
-compiling stm32h7xx_hal_tim_ex.c...
 compiling stm32h7xx_hal_i2c_ex.c...
-compiling stm32h7xx_hal_tim.c...
-compiling stm32h7xx_hal.c...
-compiling system_stm32h7xx_dualcore_boot_cm4_cm7.c...
+compiling stm32h7xx_hal_uart_ex.c...
 compiling stm32h7xx_hal_exti.c...
+compiling stm32h7xx_hal.c...
 compiling stm32h7xx_hal_i2c.c...
-compiling stm32h7xx_hal_pwr_ex.c...
+compiling system_stm32h7xx_dualcore_boot_cm4_cm7.c...
+compiling stm32h7xx_hal_uart.c...
+compiling stm32h7xx_hal_tim_ex.c...
+compiling stm32h7xx_hal_tim.c...
 linking...
-Program Size: Code=12002 RO-data=722 RW-data=28 ZI-data=1860  
-"STM32H747XI_test_CM7\STM32H747XI_test_CM7.axf" - 0 Error(s), 1 Warning(s).
+Program Size: Code=21134 RO-data=762 RW-data=76 ZI-data=2196  
+"STM32H747XI_test_CM7\STM32H747XI_test_CM7.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -75,14 +74,14 @@ Package Vendor: Keil
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_STM32H747XI_test_CM7
-  D:\Program Files\KeilMDK_Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
-  D:\Program Files\KeilMDK_Packs\Keil\STM32H7xx_DFP\2.7.0\Drivers\CMSIS\Device\ST\STM32H7xx\Include
+  C:\Users\Horbach\AppData\Local\Arm\Packs\ARM\CMSIS\5.7.0\CMSIS\Core\Include
+  C:\Users\Horbach\AppData\Local\Arm\Packs\Keil\STM32H7xx_DFP\2.7.0\Drivers\CMSIS\Device\ST\STM32H7xx\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:01:17
+Build Time Elapsed:  00:00:45
 </pre>
 </body>
 </html>
